package org.game.protobuf.s2c;

option java_outer_classname = "S2CActivityMsg";
import "S2C/S2CShareMsg.proto";

// 取得所有活动信息
// code = 5121
message RespActivitys {
	repeated ActivityInfoMsg activitys = 1;
	enum MsgID{eMsgID = 5121;}; //注意：消息id放最后,以免客户端解析异常
}

// 提交活动
// code = 5122
message ResultSubmitActivity {
	required int32 activityid = 1;			//提交的活动ID
	repeated int32 activitEntryId = 2;		//提交的活动条目ID
	repeated RewardsMsg rewards = 3;		//获得的奖励
	enum MsgID{eMsgID = 5122;}; //注意：消息id放最后,以免客户端解析异常
}

// 推送活动
// code = 5123
message PushActivitys {
	repeated ActivityInfoMsg activitys = 1;
	enum MsgID{eMsgID = 5123;}; //注意：消息id放最后,以免客户端解析异常
}

// 活动信息
message ActivityInfoMsg {
	required ChangeType ct = 1;
	required int32 id = 2;						//活动ID
	optional int32 startTime = 3;				//开始时间
	optional int32 endTime = 4;				//结束时间
	optional int32 activityType = 5;			//活动类型
	optional int32 resetType = 6;				//重置类型
	optional string remark = 7;				//备注信息Json
	optional string extendData = 8;			//扩展数据
	optional int32 rank = 9;					//排序
	repeated ActivityEntryInfoMsg entrys = 10;	//活动条目
}

// 条目信息
message ActivityEntryInfoMsg {
	required int32 id = 1;						//条目ID
	required int32 nowProgress = 2;			//当前进度
	required int32 maxProgress = 3;			//目标进度
	required int32 status = 4;					//状态
	required string reward = 5;				//奖励
	required string remark = 6;				//备注信息Json
	required int32 rank = 7;					//排序
}



// 取得所有活动信息
// code = 5124
message NewRespActivitys {
	repeated ActivityConfigMsg activitys = 1;
	enum MsgID{eMsgID = 5124;}; //注意：消息id放最后,以免客户端解析异常
}

// 提交活动
// code = 5125
message NewResultSubmitActivity {
	required int32 activityid = 1;			//提交的活动ID
	required int32 activitEntryId = 2;		//提交的活动条目ID
	repeated RewardsMsg rewards = 3;		//获得的奖励
	enum MsgID{eMsgID = 5125;}; //注意：消息id放最后,以免客户端解析异常
}

// 推送活动
// code = 5126
message NewPushActivitys {
	repeated ActivityConfigMsg activitys = 1;
	enum MsgID{eMsgID = 5126;}; //注意：消息id放最后,以免客户端解析异常
}

// 取得所有活动条目信息
// code = 5127
message NewRespActivityItems {
	repeated ActivityItemMsg items = 1;
	enum MsgID{eMsgID = 5127;}; //注意：消息id放最后,以免客户端解析异常
}

// 取得所有活动条目进度信息
// code = 5128
message NewRespActivityProgress {
	repeated ActivityProgressMsg items = 1;
	enum MsgID{eMsgID = 5128;}; //注意：消息id放最后,以免客户端解析异常
}

// 活动信息
message ActivityConfigMsg {
	required ChangeType ct = 1;
	required int32 id = 2;						//活动ID
	required int32 activityType = 3;			//活动类型
	required string activityTitle = 4;			//活动标题
	optional int32 startTime = 5;				//开始时间
	optional int32 endTime = 6;					//结束时间
	optional int32 showStartTime = 7;			//显示开始时间
	optional int32 showEndTime = 8;				//显示结束时间
	optional string remark = 9;					//备注信息Json
	optional string extendData = 10;			//扩展数据
	optional int32 rank = 11;					//排序
	optional string showIcon = 12;				//广告图
	repeated int32 items = 13;					//活动条目
}

// 条目信息
message ActivityItemMsg {
	required int32 id = 1;					//条目ID
	required int32 type = 2;				//活动类型
	optional string name = 3;				//标题
	optional string details = 4;			//条目描述
	optional string target = 5;				//条目目标
	optional string reward = 6;				//条目奖励
	optional string extendData = 7;			//扩展数据
	optional int32 rank = 8;				//排序
}

// 玩家条目进度
message ActivityProgressMsg {
	required int32 id = 1;						//活动id
	required int32 itemId = 2;					//条目ID
	required int32 progress = 3;				//当前进度
	required string extend = 4;					//进度扩展字段--用于记载单int型不能充分记录的复杂进度
	required int32 status = 5;					//状态
}